force-app/main/default/objects/OpportunityTeamMember/fields/Does_this_position_have_a_sales_budget__c.field-meta.xml
<CustomField>
    <fullName>Does_this_position_have_a_sales_budget__c</fullName>
    <formula>IF(ISPICKVAL($User.Does_this_position_have_a_sales_budget__c ,&quot;Si&quot;), &quot;Si&quot;, &quot;No&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Does this position have a sales budget?</label>
    <type>Text</type>
</CustomField>