force-app/main/default/objects/OpportunityTeamMember/fields/Drawings_Found_by__c.field-meta.xml
<CustomField>
    <fullName>Drawings_Found_by__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Campo para identificar que usuario de Porcelanosa ha encontrado los dibujos del proyecto de fachadas</description>
    <label>Drawings Found by</label>
    <type>Checkbox</type>
</CustomField>