force-app/main/default/objects/OpportunityTeamMember/fields/Is_User_Commission_Agent__c.field-meta.xml
<CustomField>
    <fullName>Is_User_Commission_Agent__c</fullName>
    <formula>User.Es_Comisionista__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is User Commission Agent</label>
    <type>Checkbox</type>
</CustomField>