force-app/main/default/objects/OpportunityTeamMember/fields/Opportunity_Managed_by__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Managed_by__c</fullName>
    <defaultValue>false</defaultValue>
    <description>campo para identificar que usuario gestiona el proyecto de fachadas</description>
    <label>Opportunity Managed by</label>
    <type>Checkbox</type>
</CustomField>