force-app/main/default/objects/OpportunityTeamMember/fields/Opportunity_Member_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Member_Name__c</fullName>
    <label>Opportunity Member Name</label>
    <length>150</length>
    <type>Text</type>
</CustomField>