force-app/main/default/objects/OpportunityTeamMember/fields/Project_Found_by__c.field-meta.xml
<CustomField>
    <fullName>Project_Found_by__c</fullName>
    <defaultValue>false</defaultValue>
    <description>campo para identificar que usuario ha encontrado el proyecto de fachadas</description>
    <label>Project Found by</label>
    <type>Checkbox</type>
</CustomField>